# gomoku

./: Cargo.toml  notes  test
manager/: Cargo.toml
manager/src/: main.rs
narabe/: .gitignore  Cargo.toml  index.html  nginx.conf  notes
narabe/src/: board.rs  board_new.rs  lib.rs  main.rs  table.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
tester/: Cargo.toml
tester/src/: main.rs
tools/src/: lib.rs
