[package]
name = "manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
narabe = { version = "0.1.0", path = "../narabe" }
macroquad = "0.4.5"
protocol = { version = "0.1.0", path = "../protocol" }
tools = { version = "0.1.0", path = "../tools" }
