[package]
name = "tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
narabe = { version = "0.1.0", path = "../narabe" }
protocol = { version = "0.1.0", path = "../protocol" }
rand = "0.8.5"
termcolor = "1.4.1"
tools = { version = "0.1.0", path = "../tools" }
